examples/type_system/failing/66_module_constructor_not_public_api.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// Policy fixture (0.0.4): module ADT constructors are internal API.
// External usage should go through module `public fn` factories/accessors.

import TypeSystem.GenericResultTree

fn main() {
    let _t = TypeSystem.GenericResultTree.Node(
        TypeSystem.GenericResultTree.Leaf(TypeSystem.GenericResultTree.Ok(1)),
        TypeSystem.GenericResultTree.Leaf(TypeSystem.GenericResultTree.Err("x")),
    )
}
